--- a/webportal/webapp/src/app/account/account.component.html
+++ b/webportal/webapp/src/app/account/account.component.html
@@ -21,7 +21,7 @@
           <li class="nav-item" [routerLinkActive]="['active']">
             <a class="nav-link" [routerLink]="['/account/datasets']">DATASETS &emsp; &nbsp;|</a>
           </li>
-          <li class="nav-item" [routerLinkActive]="['active']">
+          <li class="nav-item" [routerLinkActive]="['active']" *ngIf="isDataProvider">
             <a class="nav-link" [routerLink]="['/account/exportrequests']">EXPORT REQUESTS &emsp; &nbsp;|</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['active']">
