--- a/webportal/webapp/src/app/account/workstation/workstation.component.html
+++ b/webportal/webapp/src/app/account/workstation/workstation.component.html
@@ -44,8 +44,8 @@
                 <!--<button class="btn btn-primary dotBtn" (click)="launchWorkstation(stack)">Launch</button>-->
                 <a class="btn btn-primary dotBtn" style="cursor: pointer;" (click)="launchWorkstation(stack)" target="_blank"> Launch </a>
               </td>
-              <td *ngIf="stack.allow_resize">
-                <a class="btn btn-primary dotBtn" (click)="renderReSizeDialog(stack)" style="cursor: pointer;" target="_blank"> Resize </a>
+              <td>
+                <button class="btn btn-primary dotBtn" [disabled]="!stack.allow_resize" (click)="renderReSizeDialog(stack)" style="cursor: pointer;" target="_blank"> Resize </button>
               </td>
             </tr>
           </ng-template>
